--- a/latte-core/build.gradle
+++ b/latte-core/build.gradle
@@ -31,18 +31,18 @@ dependencies {
 
     compile "com.squareup.retrofit2:retrofit:$rootProject.ext.retrofitVersion"
     compile "com.squareup.retrofit2:converter-scalars:$rootProject.ext.retrofitVersion"
-
     compile project(':latte-annotations')
     compile "com.joanzapata.iconify:android-iconify-ionicons:$rootProject.ext.iconifyVersion"
     compile "com.joanzapata.iconify:android-iconify-fontawesome:$rootProject.ext.iconifyVersion"
-
     //fragment
     compile "me.yokeyword:fragmentation:$rootProject.ext.fragmentation"
     compile "me.yokeyword:fragmentation-swipeback:$rootProject.ext.fragmentation"
-
     compile "com.jakewharton:butterknife:$rootProject.ext.butterVersion"
     annotationProcessor "com.jakewharton:butterknife-compiler:$rootProject.ext.butterVersion"
-
     //对话框
     compile "com.wang.avi:library:$rootProject.ext.avLoadingVersion"
+
+    compile 'io.reactivex.rxjava2:rxjava:2.1.3'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
 }
